# threadlet

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  bench.py  benchmarks.py  docker-compose.yml  publish  pyproject.toml
benchmarks/: base.py  bench_default.py  bench_threadlet.py  bench_threadlet_simple.py  cleanup  run
src/threadlet/: __init__.py  abc.py
tests/: __init__.py  conftest.py  test_all.py  test_executor.py  test_perf.py  test_readme.py  test_task.py  test_thread.py  test_utils.py  test_worker.py
threadlet/: __init__.py  executor.py  thread.py  utils.py
