[tool.poetry]
name = "threadlet"
version = "0.1.1"
description = "Improved `Thread` and `ThreadPoolExecutor` classes."
authors = ["Andrii Kuzmin <jack.cvr@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://github.com/jackcvr/threadlet"
include = []

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pre-commit = "*"
pytest = "*"

[tool.pytest.ini_options]
log_cli = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
